infrastructure/model-serving/kubernetes/overlays/development/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torchserve
spec:
  rules:
  - host: models-dev.betterprompts.com
    http:
      paths:
      - path: /predictions
        pathType: Prefix
        backend:
          service:
            name: torchserve
            port:
              number: 8080
